# Project_Demo_Payment_Terms

./: .gitignore  .~lock.Sample_Company_Data_Paymentterms.xlsx#  README.md  Sample_Company_Data_Paymentterms.xlsx  build_exe.py  payment_terms_cli.spec  payment_terms_report.json  pyproject.toml  report.json
payment_terms_cli/: __init__.py  cli.py  comparer.py  excel_reader.py  models.py  qb_gateway.py  reporting.py  runner.py
tests/: test_runner.py
